Unloaded scripts are loaded via SJAX in autoload example

--- a/public/autoload.html
+++ b/public/autoload.html
@@ -3,10 +3,7 @@
     <head>
         <title>Mootools Namespace - Base</title>
         <script src="http://ajax.googleapis.com/ajax/libs/mootools/1.2.4/mootools.js"></script>
-        <script src="js/Moo/Namespace.js"></script>
-        <script>
-            Namespace.setBasePath('js');
-        </script>
+        <script src="js/Namespace.moo.js"></script>
         <script src="js/My/Examples/Extends.js"></script>
     </head>
 <body>
