--- a/public/base.html
+++ b/public/base.html
@@ -3,7 +3,7 @@
     <head>
         <title>Mootools Namespace - Base</title>
         <script src="http://ajax.googleapis.com/ajax/libs/mootools/1.2.4/mootools.js"></script>
-        <script src="js/Moo/Namespace.js"></script>
+        <script src="js/Namespace.moo.js"></script>
         <script src="js/My/Examples/Base.js"></script>
     </head>
 <body>
