Finished adding in requires example

--- a/public/autoload.html
+++ b/public/autoload.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Mootools Namespace - Base</title>
+        <title>Mootools Namespace - Extends (Autoload)</title>
         <script src="http://ajax.googleapis.com/ajax/libs/mootools/1.2.4/mootools.js"></script>
         <script src="js/Namespace.moo.js"></script>
         <script src="js/My/Examples/Extends.js"></script>
