--- a/public/requires.html
+++ b/public/requires.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Mootools Namespace - Extends (No Autoload)</title>
+        <title>Mootools Namespace - Requires</title>
         <script src="http://ajax.googleapis.com/ajax/libs/mootools/1.2.4/mootools.js"></script>
         <script src="js/Namespace.moo.js"></script>
-        <script src="js/My/Examples/Base.js"></script>
-        <script src="js/My/Examples/Extends.js"></script>
+        <script src="js/My/Examples/All.js"></script>
     </head>
 <body>
     This text should be replaced.
     
     <script>
-        new My.Examples.Extends("My.Examples.Extends");
+        new My.Examples.All();
     </script>
 </body>
 </html>
