--- a/public/extends.html
+++ b/public/extends.html
@@ -3,7 +3,7 @@
     <head>
         <title>Mootools Namespace - Extends (No Autoload)</title>
         <script src="http://ajax.googleapis.com/ajax/libs/mootools/1.2.4/mootools.js"></script>
-        <script src="js/Namespace.moo.js"></script>
+        <script src="js/Namespace.class.js"></script>
         <script src="js/My/Examples/Base.js"></script>
         <script src="js/My/Examples/Extends.js"></script>
     </head>
