Added FX example & used custom Mootools build (Request+Class.Extras)

--- a/public/extends.html
+++ b/public/extends.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Mootools Namespace - Extends (No Autoload)</title>
-        <script src="http://ajax.googleapis.com/ajax/libs/mootools/1.2.4/mootools.js"></script>
+        <script src="js/Mootools.class.js"></script>
         <script src="js/Namespace.class.js"></script>
         <script src="js/My/Examples/Base.js"></script>
         <script src="js/My/Examples/Extends.js"></script>
