--- a/public/nesting.html
+++ b/public/nesting.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Mootools Namespace - Extends (Autoload)</title>
+        <title>Mootools Namespace - Nesting</title>
         <script src="js/Mootools.class.js"></script>
         <script src="js/Namespace.class.js"></script>
-        <script src="js/My/Examples/Extends.js"></script>
+        <script src="js/My/Examples/Base/Nesting.js"></script>
     </head>
 <body>
     This text should be replaced.
     
     <script>
-        new My.Examples.Extends("My.Examples.Extends");
+        new My.Examples.Base.Nesting("My.Examples.Base.Nesting");
     </script>
 </body>
 </html>
