Removed submodules *again* and re-arranged demos

--- a/demos/autoload.html
+++ b/demos/autoload.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Mootools Namespace - Extends (No Autoload)</title>
+        <title>Mootools Namespace - Extends (Autoload)</title>
         <script src="js/Mootools.class.js"></script>
-        <script src="js/Namespace.class.js"></script>
-        <script src="js/My/Examples/Base.js"></script>
+        <script src="../Source/Namespace.class.js"></script>
         <script src="js/My/Examples/Extends.js"></script>
     </head>
 <body>
