--- a/demos/base.html
+++ b/demos/base.html
@@ -3,7 +3,7 @@
     <head>
         <title>Mootools Namespace - Base</title>
         <script src="js/Mootools.class.js"></script>
-        <script src="js/Namespace.class.js"></script>
+        <script src="../Source/Namespace.class.js"></script>
         <script src="js/My/Examples/Base.js"></script>
     </head>
 <body>
