--- a/demos/fx.html
+++ b/demos/fx.html
@@ -3,7 +3,7 @@
     <head>
         <title>Mootools Namespace - FX</title>
         <script src="js/Mootools.class.js"></script>
-        <script src="js/Namespace.class.js"></script>
+        <script src="../Source/Namespace.class.js"></script>
         <script>
             Namespace.setBasePath('Moo.Core', 'Moo/Core/Source');
         </script>
