--- a/demos/requires.html
+++ b/demos/requires.html
@@ -3,7 +3,7 @@
     <head>
         <title>Mootools Namespace - Requires</title>
         <script src="js/Mootools.class.js"></script>
-        <script src="js/Namespace.class.js"></script>
+        <script src="../Source/Namespace.class.js"></script>
     </head>
 <body>
     This text should be replaced.
