Updated demos to work with new folder structure

--- a/demos/base.html
+++ b/demos/base.html
@@ -5,6 +5,9 @@
         <script src="js/Mootools.class.js"></script>
         <script src="../Source/Namespace.class.js"></script>
         <script src="js/My/Examples/Base.js"></script>
+        <script>
+            Namespace.setBasePath("js");
+        </script>
     </head>
 <body>
     This text should be replaced.
