--- a/demos/request.html
+++ b/demos/request.html
@@ -5,6 +5,7 @@
         <script src="js/Mootools.class.js"></script>
         <script src="../Source/Namespace.class.js"></script>
         <script>
+            Namespace.setBasePath("js");
             Namespace.setBasePath('Moo.Core', 'Moo/Core/Source');
         </script>
     </head>
