--- a/demos/extends.html
+++ b/demos/extends.html
@@ -4,6 +4,9 @@
         <title>Mootools Namespace - Extends (No Autoload)</title>
         <script src="js/Mootools.class.js"></script>
         <script src="../Source/Namespace.class.js"></script>
+        <script>
+            Namespace.setBasePath("js");
+        </script>
         <script src="js/My/Examples/Base.js"></script>
         <script src="js/My/Examples/Extends.js"></script>
     </head>
