--- a/demos/nesting.html
+++ b/demos/nesting.html
@@ -4,6 +4,9 @@
         <title>Mootools Namespace - Nesting</title>
         <script src="js/Mootools.class.js"></script>
         <script src="../Source/Namespace.class.js"></script>
+        <script>
+            Namespace.setBasePath("js");
+        </script>
         <script src="js/My/Examples/Base/Nesting.js"></script>
     </head>
 <body>
