--- a/demos/requires.html
+++ b/demos/requires.html
@@ -4,6 +4,9 @@
         <title>Mootools Namespace - Requires</title>
         <script src="js/Mootools.class.js"></script>
         <script src="../Source/Namespace.class.js"></script>
+        <script>
+            Namespace.setBasePath("js");
+        </script>
     </head>
 <body>
     This text should be replaced.
