Added improved messaging to demos

--- a/demos/01-base.html
+++ b/demos/01-base.html
@@ -13,7 +13,7 @@
     This text should be replaced.
     
     <script>
-        new My.Examples.Base("My.Examples.Base");
+        new My.Examples.Base("This example simply shows that the Namespace class properly creates window.My.Example.Base");
     </script>
 </body>
 </html>
