--- a/demos/02-nesting.html
+++ b/demos/02-nesting.html
@@ -13,7 +13,7 @@
     This text should be replaced.
     
     <script>
-        new My.Examples.Base.Nesting("My.Examples.Base.Nesting");
+        new My.Examples.Base.Nesting("My.Examples.Base is still a functional class, though My.Examples.Base.NEsting exists.");
     </script>
 </body>
 </html>
