--- a/demos/03-requires.html
+++ b/demos/03-requires.html
@@ -13,7 +13,7 @@
     
     <script>
         Namespace.require("My.Examples.All");
-        new My.Examples.All();
+        new My.Examples.All("<br />My.Examples.Base & My.Examples.Extends were loaded and called separately!");
     </script>
 </body>
 </html>
