--- a/demos/05-autoload.html
+++ b/demos/05-autoload.html
@@ -13,7 +13,10 @@
     This text should be replaced.
     
     <script>
-        new My.Examples.Extends("My.Examples.Extends");
+        // Clean the slate
+        document.body.innerHTML = '';
+        
+        new My.Examples.Extends("My.Examples.Base was missing & automatically loaded by My.Examples.Extends");
     </script>
 </body>
 </html>
