--- a/demos/06-fx.html
+++ b/demos/06-fx.html
@@ -5,6 +5,7 @@
         <script src="js/Mootools.class.js"></script>
         <script src="../Source/Namespace.class.js"></script>
         <script>
+            // All source code is expected to be found in ./js
             Namespace.setBasePath("js");
             Namespace.setBasePath('Moo.Core', 'Moo/Core/Source');
         </script>
