--- a/demos/01-base.html
+++ b/demos/01-base.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Mootools Namespace - Base</title>
-        <script src="js/Mootools.class.js"></script>
+        <script src="../Source/mootools-core-1.2.4.js"></script>
         <script src="../Source/Namespace.class.js"></script>
         <script src="js/My/Examples/Base.js"></script>
         <script>
