--- a/demos/04-extends.html
+++ b/demos/04-extends.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Mootools Namespace - Extends (No Autoload)</title>
-        <script src="js/Mootools.class.js"></script>
+        <script src="../Source/mootools-core-1.2.4.js"></script>
         <script src="../Source/Namespace.class.js"></script>
         <script>
             Namespace.setBasePath("js");
